# spatial-index-fix

./: README.md  requirements.txt  setup.cfg  setup.py  test.ini
ckanext/spatial_index_fix/: plugin.py  utils.py
