[metadata]
name = ckanext-spatial-index-fix
version = 0.0.1
description = Fix Error on spatial extension data indexing and Dataset update
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pavel.malko@linkdigital.com.au/ckanext-spatial-index-fix
author = Pavlo Malko
author_email = pavel.malko@linkdigital.com.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN spatial fix index

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             spatial_index_fix = ckanext.spatial_index_fix.plugin:SpatialIndexFixPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/spatial_index_fix/i18n/ckanext-spatial_index_fix.pot
width = 80

[init_catalog]
domain = ckanext-spatial_index_fix
input_file = ckanext/spatial_index_fix/i18n/ckanext-spatial_index_fix.pot
output_dir = ckanext/spatial_index_fix/i18n

[update_catalog]
domain = ckanext-spatial_index_fix
input_file = ckanext/spatial_index_fix/i18n/ckanext-spatial_index_fix.pot
output_dir = ckanext/spatial_index_fix/i18n
previous = true

[compile_catalog]
domain = ckanext-spatial_index_fix
directory = ckanext/spatial_index_fix/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
